@@ -3,6 +3,14 @@
 # see misc/tools/kconfig-language.txt.
 #
 
+config DISABLE_POLL
+	bool "Disable driver poll interfaces"
+	default n
+	---help---
+		The sizes of drivers can be reduced if the poll() method is not
+		supported.  If you do not use poll() or select(), then you can
+		select DISABLE_POLL to reduce the code footprint by a small amount.
+
 config DEV_NULL
 	bool "Enable /dev/null"
 	default y
